AOBD textures and other things

--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -407,29 +407,6 @@ assets.cofh.textures.items.icons.Icon_Information = *project*
 assets.cofh.textures.items.icons.Icon_RSTorchOff = *project*
 assets.cofh.textures.items.icons.Icon_RSTorchOn = *project*
 assets.cofh.textures.items.icons.Icon_Tutorial = *project*
-assets.ic2.textures.blocks.machine.blockCropmatron = *project*
-assets.ic2.textures.blocks.machine.blockPump = *project*
-assets.ic2.textures.blocks.machine.blockSteamGenerator = *project*
-assets.ic2.textures.gui.GUIAdvMiner = *project*
-assets.ic2.textures.gui.GUICropmatron = *project*
-assets.ic2.textures.gui.GUIElecFurnace = *project*
-assets.ic2.textures.gui.GUIElectricHeatGenerator = *project*
-assets.ic2.textures.gui.GUIFermenter = *project*
-assets.ic2.textures.gui.GUIFluidRegulator = *project*
-assets.ic2.textures.gui.GUIFurnace = *project*
-assets.ic2.textures.gui.GUIHeatSourceFluid = *project*
-assets.ic2.textures.gui.GUIInduction = *project*
-assets.ic2.textures.gui.GUIOverlay = *project*
-assets.ic2.textures.gui.GUIRTGenerator = *project*
-assets.ic2.textures.gui.GUIRTHeatGenerator = *project*
-assets.ic2.textures.gui.GUISteamGenerator = *project*
-assets.ic2.textures.gui.GUISteamKineticGenerator = *project*
-assets.ic2.textures.items.itemNanoSaber%dactive = *project*
-assets.ic2.textures.items.itemNanoSaber%doff = *project*
-assets.ic2.textures.items.rotors.itemironrotor = *project*
-assets.ic2.textures.items.rotors.itemsteelrotor = *project*
-assets.ic2.textures.items.rotors.itemwcarbonrotor = *project*
-assets.ic2.textures.items.rotors.itemwoodrotor = *project*
 assets.mekanism.armor.bronze_1 = *project*
 assets.mekanism.armor.bronze_2 = *project*
 assets.mekanism.armor.glowstone_1 = *project*
@@ -1388,25 +1365,6 @@ assets.thermalexpansion.textures.blocks.machine.Machine_Frame_Top = *project*
 assets.thermalexpansion.textures.blocks.machine.Machine_Side = *project*
 assets.thermalexpansion.textures.blocks.machine.Machine_Top = *project*
 assets.thermalexpansion.textures.gui.dynamo.DynamoMagmatic = *project*
-assets.tinker.textures.blocks.searedbrick = *project*
-assets.tinker.textures.blocks.searedbrickcracked = *project*
-assets.tinker.textures.blocks.searedbrickfancy = *project*
-assets.tinker.textures.blocks.searedbricksquare = *project*
-assets.tinker.textures.blocks.searedcobble = *project*
-assets.tinker.textures.gui.landmine = *project*
-assets.tinker.textures.gui.minichest = *project*
-assets.tinker.textures.gui.newhearts = *project*
-assets.tinker.textures.gui.patternchest = *project*
-assets.tinker.textures.gui.patternchestmini = *project*
-assets.tinker.textures.gui.patternshaper = *project*
-assets.tinker.textures.gui.smeltery = *project*
-assets.tinker.textures.gui.smelteryside = *project*
-assets.tinker.textures.gui.tinkertable = *project*
-assets.tinker.textures.gui.toolparts = *project*
-assets.tinker.textures.gui.toolstation = *project*
-assets.tinker.textures.mob.slimeedible = *project*
-assets.tinker.textures.mob.slimemetal = *project*
-assets.tinker.textures.mob.villagertools = *project*
 assets.mekanism.textures.blocks.overlay.EnergyOverlay = *vanilla*
 assets.mekanism.textures.blocks.overlay.FluidsOverlay = *vanilla*
 assets.mekanism.textures.blocks.overlay.GasesOverlay = *vanilla*
@@ -1788,3 +1746,11 @@ assets.cofh.textures.items.icons.Icon_Cancel = *project*
 assets.cofh.textures.items.icons.Icon_Cancel_Inactive = *project*
 assets.cofh.textures.items.icons.Icon_Nope = *vanilla*
 assets.cofh.textures.logo = *vanilla*
+assets.hdskins.textures.cubemaps.cubemap0_0 = *vanilla*
+assets.hdskins.textures.cubemaps.cubemap0_1 = *vanilla*
+assets.hdskins.textures.cubemaps.cubemap0_2 = *vanilla*
+assets.hdskins.textures.cubemaps.cubemap0_3 = *vanilla*
+assets.hdskins.textures.cubemaps.cubemap0_4 = *vanilla*
+assets.hdskins.textures.cubemaps.cubemap0_5 = *vanilla*
+assets.hdskins.textures.mob.noskin = *vanilla*
+assets.hdskins.textures.mob.tempskin = *vanilla*
