--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -20,3 +20,11 @@ assets.cofh.textures.gui.elements = *project*
 assets.cofh.textures.gui.storage = *project*
 assets.cofh.textures.items = *project*
 assets.cofh.textures.items.icons = *project*
+assets.bts = *vanilla*
+assets.hdskins = *vanilla*
+assets.hdskins.textures = *vanilla*
+assets.hdskins.textures.cubemaps = *vanilla*
+assets.hdskins.textures.mob = *vanilla*
+assets.headcrumbs = *vanilla*
+assets.minelittlepony.textures.entity.pony = *vanilla*
+assets.voxelcommon = *vanilla*
