--- a/DevTSKAll/properties.cfg
+++ b/DevTSKAll/properties.cfg
@@ -1,5 +1,5 @@
 # Project 'DevTSKAll' config file
 
 
-title = The_Silver_Kid's Resource Pack
-version = 430
+title = Silver's Textures
+version = 431
