--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -1,30 +1,2 @@
-assets = *project*
+assets.buildcraft = *vanilla*
 assets.mekanism.textures.blocks.overlay = *vanilla*
-assets.mekanism.lang = *vanilla*
-assets.mekanism.particles = *vanilla*
-assets.mekanism.sounds = *vanilla*
-assets.mekanism.sounds.cj = *vanilla*
-assets.mekanism.sounds.etc = *vanilla*
-assets.mekanism.sounds.holiday = *vanilla*
-assets.mekanism.armor = *project*
-assets.mekanism.infuse = *project*
-assets.mekanism.render = *project*
-assets.mekanism.textures.items = *project*
-assets.minecraft.blockstates = *vanilla*
-assets.minecraft.lang = *vanilla*
-assets.realms = *vanilla*
-assets.cofh = *project*
-assets.cofh.textures = *project*
-assets.cofh.textures.gui = *project*
-assets.cofh.textures.gui.elements = *project*
-assets.cofh.textures.gui.storage = *project*
-assets.cofh.textures.items = *project*
-assets.cofh.textures.items.icons = *project*
-assets.bts = *vanilla*
-assets.hdskins = *vanilla*
-assets.hdskins.textures = *vanilla*
-assets.hdskins.textures.cubemaps = *vanilla*
-assets.hdskins.textures.mob = *vanilla*
-assets.headcrumbs = *vanilla*
-assets.minelittlepony.textures.entity.pony = *vanilla*
-assets.voxelcommon = *vanilla*
