--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -1221,3 +1221,13 @@ assets.mekanism.textures.blocks.overlay.OverlayPurple = *vanilla*
 assets.mekanism.textures.blocks.overlay.OverlayRed = *vanilla*
 assets.mekanism.textures.blocks.overlay.OverlayWhite = *vanilla*
 assets.mekanism.textures.blocks.overlay.OverlayYellow = *vanilla*
+assets.ironchest.textures.blocks.copper_front = *project*
+assets.ironchest.textures.model.copperchest = *project*
+assets.ironchest.textures.model.crystalchest = *project*
+assets.ironchest.textures.model.diamondchest = *project*
+assets.ironchest.textures.model.dirtchest = *project*
+assets.ironchest.textures.model.goldchest = *project*
+assets.ironchest.textures.model.ironchest = *project*
+assets.ironchest.textures.model.obsidianchest = *project*
+assets.ironchest.textures.model.silverchest = *project*
+assets.dimdoors.lang.en_US = *project*
