--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -1348,3 +1348,8 @@ assets.thermalfoundation.textures.blocks.storage.Block_Platinum = *project*
 assets.thermalfoundation.textures.blocks.storage.Block_Signalum = *project*
 assets.aobd.textures.blocks.fluid_flow = *project*
 assets.aobd.textures.blocks.fluid_still = *project*
+assets.galacticraftmoon.textures.blocks.brick = *project*
+assets.galacticraftmoon.textures.items.cheese_curd = *project*
+assets.galacticraftmoon.textures.items.compressedMeteoricIron = *project*
+assets.galacticraftmoon.textures.items.meteoricIronIngot = *project*
+assets.galacticraftmoon.textures.items.meteoricIronRaw = *project*
