--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -597,7 +597,6 @@ assets.minecraft.textures.blocks.farmland_wet = *project*
 assets.minecraft.textures.blocks.fern = *project*
 assets.minecraft.textures.blocks.fire_layer_0 = *project*
 assets.minecraft.textures.blocks.fire_layer_1 = *project*
-assets.minecraft.textures.blocks.flower_rose = *project*
 assets.minecraft.textures.blocks.furnace_front_off = *project*
 assets.minecraft.textures.blocks.furnace_front_on = *project*
 assets.minecraft.textures.blocks.furnace_side = *project*
@@ -1353,3 +1352,75 @@ assets.galacticraftmoon.textures.items.cheese_curd = *project*
 assets.galacticraftmoon.textures.items.compressedMeteoricIron = *project*
 assets.galacticraftmoon.textures.items.meteoricIronIngot = *project*
 assets.galacticraftmoon.textures.items.meteoricIronRaw = *project*
+assets.thermalfoundation.textures.items.tool.tin.TinAxe = *project*
+assets.thermalfoundation.textures.items.tool.tin.TinHoe = *project*
+assets.thermalfoundation.textures.items.tool.tin.TinPickaxe = *project*
+assets.thermalfoundation.textures.items.tool.tin.TinShovel = *project*
+assets.thermalfoundation.textures.items.tool.tin.TinSickle = *project*
+assets.thermalfoundation.textures.items.tool.tin.TinSword = *project*
+assets.minecraft.textures.blocks.end_bricks = *project*
+assets.minecraft.textures.blocks.grass_path_side = *project*
+assets.minecraft.textures.blocks.grass_path_top = *project*
+assets.minecraft.textures.blocks.hardened_clay = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_black = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_blue = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_brown = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_cyan = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_gray = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_green = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_light_blue = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_lime = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_magenta = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_orange = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_pink = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_purple = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_red = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_silver = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_white = *project*
+assets.minecraft.textures.blocks.hardened_clay_stained_yellow = *project*
+assets.minecraft.textures.blocks.magma = *project*
+assets.minecraft.textures.blocks.nether_wart_block = *project*
+assets.minecraft.textures.blocks.red_nether_brick = *project*
+assets.minecraft.textures.blocks.redstone_dust_overlay = *vanilla*
+assets.minecraft.textures.blocks.repeating_command_block_conditional = *project*
+assets.minecraft.textures.blocks.repeating_command_block_front = *project*
+assets.minecraft.textures.blocks.repeating_command_block_side = *project*
+assets.minecraft.textures.blocks.sapling_acacia = *project*
+assets.minecraft.textures.blocks.sapling_birch = *project*
+assets.minecraft.textures.blocks.sapling_jungle = *project*
+assets.minecraft.textures.blocks.sapling_oak = *project*
+assets.minecraft.textures.blocks.sapling_roofed_oak = *project*
+assets.minecraft.textures.blocks.sapling_spruce = *project*
+assets.minecraft.textures.blocks.structure_block = *project*
+assets.minecraft.textures.blocks.structure_block_corner = *project*
+assets.minecraft.textures.entity.enderdragon.dragon_exploding = *project*
+assets.minecraft.textures.entity.enderdragon.dragon_fireball = *project*
+assets.minecraft.textures.entity.projectiles.arrow = *project*
+assets.minecraft.textures.entity.projectiles.spectral_arrow = *project*
+assets.minecraft.textures.entity.projectiles.tipped_arrow = *project*
+assets.minecraft.textures.entity.skeleton.stray = *project*
+assets.minecraft.textures.entity.skeleton.stray_overlay = *project*
+assets.minecraft.textures.entity.zombie.husk = *project*
+assets.minecraft.textures.gui.achievement.achievement_background = *project*
+assets.minecraft.textures.gui.achievement.achievement_icons = *vanilla*
+assets.minecraft.textures.gui.container.creative_inventory.tab_claysoldiers = *project*
+assets.minecraft.textures.gui.presets.chaos = *vanilla*
+assets.minecraft.textures.gui.presets.delight = *vanilla*
+assets.minecraft.textures.gui.presets.drought = *vanilla*
+assets.minecraft.textures.gui.presets.isles = *vanilla*
+assets.minecraft.textures.gui.presets.luck = *vanilla*
+assets.minecraft.textures.gui.presets.madness = *vanilla*
+assets.minecraft.textures.gui.presets.water = *vanilla*
+assets.minecraft.textures.gui.title.minecraft = *project*
+assets.minecraft.textures.gui.title.mojang = *project*
+assets.minecraft.textures.gui.bars = *project*
+assets.minecraft.textures.gui.book = *project*
+assets.minecraft.textures.gui.demo_background = *project*
+assets.minecraft.textures.items.empty_armor_slot_boots = *vanilla*
+assets.minecraft.textures.items.empty_armor_slot_chestplate = *vanilla*
+assets.minecraft.textures.items.empty_armor_slot_helmet = *vanilla*
+assets.minecraft.textures.items.empty_armor_slot_leggings = *vanilla*
+assets.minecraft.textures.items.empty_armor_slot_shield = *vanilla*
+assets.minecraft.textures.map.map_icons = *project*
+assets.minecraft.textures.misc.pumpkinblur = *vanilla*
+assets.minecraft.textures.misc.vignette = *vanilla*
