--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -1,2 +1,3 @@
 assets.buildcraft = *vanilla*
 assets.mekanism.textures.blocks.overlay = *vanilla*
+assets.minecraft.textures.gui.presets = *vanilla*
