--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -1424,3 +1424,86 @@ assets.minecraft.textures.items.empty_armor_slot_shield = *vanilla*
 assets.minecraft.textures.map.map_icons = *project*
 assets.minecraft.textures.misc.pumpkinblur = *vanilla*
 assets.minecraft.textures.misc.vignette = *vanilla*
+assets.galacticraftcore.textures.model.creeper = *project*
+assets.galacticraftcore.textures.model.parachest = *project*
+assets.galacticraftcore.textures.model.skeleton = *project*
+assets.galacticraftcore.textures.model.solarPanelAdvanced = *project*
+assets.galacticraftcore.textures.model.solarPanelBasic = *project*
+assets.galacticraftcore.textures.model.spider = *project*
+assets.galacticraftcore.textures.model.spider_eyes = *project*
+assets.galacticraftcore.textures.model.treasure = *project*
+assets.galacticraftcore.textures.model.villager = *project*
+assets.galacticraftcore.textures.model.zombie = *project*
+assets.galacticraftmoon.textures.blocks.bottom = *project*
+assets.galacticraftmoon.textures.blocks.cheese_1 = *project*
+assets.galacticraftmoon.textures.blocks.cheese_2 = *project*
+assets.galacticraftmoon.textures.blocks.cheese_3 = *project*
+assets.galacticraftmoon.textures.blocks.cheese_block = *project*
+assets.galacticraftmoon.textures.blocks.middle = *project*
+assets.galacticraftmoon.textures.blocks.moonore_cheese = *project*
+assets.galacticraftmoon.textures.blocks.moonore_copper = *project*
+assets.galacticraftmoon.textures.blocks.moonore_tin = *project*
+assets.galacticraftmoon.textures.blocks.top = *project*
+assets.galacticraftmoon.textures.blocks.top_side = *project*
+assets.mekanism.textures.blocks.AmbientAccumulator = *vanilla*
+assets.mekanism.textures.blocks.Chlorine = *project*
+assets.mekanism.textures.blocks.EliteCombiningFactoryFront = *project*
+assets.mekanism.textures.blocks.EliteCombiningFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.EliteCompressingFactoryFront = *project*
+assets.mekanism.textures.blocks.EliteCompressingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.EliteCrushingFactoryFront = *project*
+assets.mekanism.textures.blocks.EliteCrushingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.EliteEnrichingFactoryFront = *project*
+assets.mekanism.textures.blocks.EliteEnrichingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.EliteInjectingFactoryFront = *project*
+assets.mekanism.textures.blocks.EliteInjectingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.ElitePurifyingFactoryFront = *project*
+assets.mekanism.textures.blocks.ElitePurifyingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.EliteSmeltingFactoryFront = *project*
+assets.mekanism.textures.blocks.EliteSmeltingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.LiquidChlorine = *project*
+assets.mekanism.textures.blocks.LiquidEnergy = *project*
+assets.mekanism.textures.blocks.LiquidEnergyStatic = *project*
+assets.mekanism.textures.blocks.LiquidSteam = *project*
+assets.mekanism.textures.blocks.WaterVapor = *project*
+assets.minecraft.textures.items.leather_chestplate_overlay = *vanilla*
+assets.projecte.textures.armor.redmatter_1 = *project*
+assets.projecte.textures.armor.redmatter_2 = *project*
+assets.projecte.textures.blocks.collectors.front = *project*
+assets.projecte.textures.blocks.collectors.other = *project*
+assets.projecte.textures.blocks.collectors.top_1 = *project*
+assets.projecte.textures.blocks.collectors.top_2 = *project*
+assets.projecte.textures.blocks.collectors.top_3 = *project*
+assets.projecte.textures.blocks.explosives.bottom = *project*
+assets.projecte.textures.blocks.explosives.top = *project*
+assets.projecte.textures.blocks.relays.front = *project*
+assets.projecte.textures.blocks.relays.other = *project*
+assets.projecte.textures.blocks.relays.top_1 = *project*
+assets.projecte.textures.blocks.relays.top_2 = *project*
+assets.projecte.textures.blocks.relays.top_3 = *project*
+assets.projecte.textures.blocks.transmutation_stone.bottom = *project*
+assets.projecte.textures.blocks.transmutation_stone.side = *project*
+assets.projecte.textures.blocks.transmutation_stone.top = *project*
+assets.projecte.textures.blocks.condenser = *project*
+assets.projecte.textures.blocks.condenser_mk2 = *project*
+assets.projecte.textures.blocks.fuels_0 = *project*
+assets.projecte.textures.blocks.fuels_1 = *project*
+assets.projecte.textures.blocks.fuels_2 = *project*
+assets.projecte.textures.blocks.interdiction_torch = *project*
+assets.projecte.textures.gui.alchchest = *project*
+assets.projecte.textures.gui.condenser = *project*
+assets.projecte.textures.gui.condenser_mk2 = *project*
+assets.projecte.textures.gui.pedestal = *project*
+assets.projecte.textures.gui.transmute = *project*
+assets.projecte.textures.items.covalence_dust.high = *project*
+assets.projecte.textures.items.covalence_dust.low = *project*
+assets.projecte.textures.items.covalence_dust.medium = *project*
+assets.projecte.textures.items.fuels.aeternalis = *project*
+assets.projecte.textures.items.fuels.alchemical_coal = *project*
+assets.projecte.textures.items.fuels.mobius = *project*
+assets.projecte.textures.items.philosophers_stone = *project*
+assets.projecte.textures.items.repair_talisman = *project*
+assets.projecte.textures.items.transmute_tablet = *project*
+assets.projecte.textures.models.heartcircle = *vanilla*
+assets.projecte.textures.models.pedestaltexmap = *project*
+assets.projecte.textures.models.yuecircle = *vanilla*
