--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -1412,7 +1412,7 @@ assets.minecraft.textures.gui.presets.luck = *vanilla*
 assets.minecraft.textures.gui.presets.madness = *vanilla*
 assets.minecraft.textures.gui.presets.water = *vanilla*
 assets.minecraft.textures.gui.title.minecraft = *project*
-assets.minecraft.textures.gui.title.mojang = *project*
+assets.minecraft.textures.gui.title.mojang = *vanilla*
 assets.minecraft.textures.gui.bars = *project*
 assets.minecraft.textures.gui.book = *project*
 assets.minecraft.textures.gui.demo_background = *project*
@@ -1507,3 +1507,61 @@ assets.projecte.textures.items.transmute_tablet = *project*
 assets.projecte.textures.models.heartcircle = *vanilla*
 assets.projecte.textures.models.pedestaltexmap = *project*
 assets.projecte.textures.models.yuecircle = *vanilla*
+assets.dimdoors.textures.items.itemChaosDoor = *project*
+assets.dimdoors.textures.items.itemDDKey = *project*
+assets.dimdoors.textures.items.itemDimDoor = *project*
+assets.dimdoors.textures.items.itemDimDoorWarp = *project*
+assets.dimdoors.textures.items.itemGoldDimDoor = *project*
+assets.dimdoors.textures.items.itemGoldDoor = *project*
+assets.dimdoors.textures.items.itemLinkSignature = *project*
+assets.dimdoors.textures.items.itemQuartzDimDoor = *project*
+assets.dimdoors.textures.items.itemQuartzDoor = *project*
+assets.dimdoors.textures.other.dimdoors_logo = *vanilla*
+assets.dimdoors.textures.other.keyhole = *vanilla*
+assets.dimdoors.textures.other.keyholeLight = *vanilla*
+assets.dimdoors.textures.other.keyOutline = *vanilla*
+assets.dimdoors.textures.other.keyOutlineLight = *vanilla*
+assets.dimdoors.textures.other.RIFT = *project*
+assets.dimdoors.dimdoors_logo = *vanilla*
+assets.dimdoors.sounds = *vanilla*
+assets.galacticraftcore.textures.gui.schematicpage = *project*
+assets.galacticraftcore.textures.items.basicItem%dingotCopper = *project*
+assets.galacticraftcore.textures.items.basicItem%dingotTin = *project*
+assets.galacticraftcore.textures.items.bucketOil = *project*
+assets.galacticraftcore.textures.items.key%dT1 = *project*
+assets.galacticraftcore.textures.items.schematic_buggy = *project*
+assets.galacticraftcore.textures.items.schematic_rocketT2 = *project*
+assets.galacticraftcore.textures.misc.footprint = *vanilla*
+assets.galacticraftcore.textures.misc.light = *project*
+assets.galacticraftcore.textures.misc.underoil = *project*
+assets.galacticraftcore.textures.model.armor.sensor_1 = *project*
+assets.galacticraftcore.textures.model.armor.steel_1 = *project*
+assets.galacticraftcore.textures.model.armor.steel_2 = *project*
+assets.galacticraftcore.textures.model.armor.steel_3 = *project*
+assets.galacticraftcore.textures.model.book = *project*
+assets.galacticraftcore.textures.model.flag = *project*
+assets.galacticraftcore.textures.model.meteor = *project*
+assets.galacticraftcore.textures.model.oxygen = *project*
+assets.galacticraftcore.textures.model.player = *project*
+assets.galacticraftcore.textures.model.power = *project*
+assets.galacticraftcore.textures.model.rocketT1 = *project*
+assets.galacticraftcore.textures.model.thruster = *project*
+assets.galacticraftcore.textures.model.treasurelarge = *project*
+assets.galacticraftcore.galacticraft_logo = *vanilla*
+assets.galacticraftcore.sounds = *vanilla*
+assets.galacticraftmars.galacticraft_logo = *vanilla*
+assets.galacticraftmoon.textures.blocks.grass_step_1 = *project*
+assets.galacticraftmoon.textures.blocks.grass_step_2 = *project*
+assets.galacticraftmoon.textures.blocks.grass_step_3 = *project*
+assets.galacticraftmoon.textures.blocks.grass_step_4 = *project*
+assets.galacticraftmoon.textures.blocks.grass_step_5 = *project*
+assets.galacticraftmoon.textures.blocks.grass_step_6 = *project*
+assets.galacticraftmoon.textures.blocks.grass_step_7 = *project*
+assets.galacticraftmoon.textures.blocks.grass_step_8 = *project*
+assets.minecraft.textures.entity.elytra = *project*
+assets.minecraft.textures.entity.end_gateway_beam = *project*
+assets.gravigun.textures.items.gravigunNormal = *project*
+assets.gravigun.textures.items.gravigunSupercharged = *project*
+assets.gravigun.textures.model.gg_grav = *project*
+assets.minecraft.textures.entity.experience_orb = *vanilla*
+assets.minecraft.textures.gui.world_selection = *project*
