--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -1,3 +1,31 @@
 assets.buildcraft = *vanilla*
 assets.mekanism.textures.blocks.overlay = *vanilla*
 assets.minecraft.textures.gui.presets = *vanilla*
+assets.dimdoors = *project*
+assets.dimdoors.textures.other = *project*
+assets.galacticraftcore.textures.misc = *project*
+assets.galacticraftmoon = *project*
+assets.mekanism.armor = *project*
+assets.mekanism.infuse = *project*
+assets.mekanism.lang = *project*
+assets.mekanism.particles = *vanilla*
+assets.mekanism.render = *project*
+assets.mekanism.sounds = *vanilla*
+assets.minecraft.textures.effect = *vanilla*
+assets.ironchest = *project*
+assets.ironchest.textures.model = *project*
+assets.minecraft.blockstates = *vanilla*
+assets.minecraft.lang = *vanilla*
+assets.minecraft.loot_tables = *vanilla*
+assets.minecraft.shaders = *vanilla*
+assets.minecraft.sounds = *vanilla*
+assets.minecraft.texts = *project*
+assets.minecraft.textures.colormap = *project*
+assets.minecraft.textures.environment = *project*
+assets.minecraft.textures.font = *vanilla*
+assets.minecraft.textures.gui = *project*
+assets.minecraft.textures.map = *project*
+assets.minecraft.textures.misc = *project*
+assets.minecraft.textures.models = *project*
+assets.minecraft.textures.painting = *project*
+assets.minecraft.textures.particle = *project*
