--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -2042,3 +2042,54 @@ assets.buildcraftbuilders.textures.items.blueprint.clean = *project*
 assets.buildcraftbuilders.textures.items.blueprint.used = *project*
 assets.minecraft.textures.gui.stream_indicator = *vanilla*
 assets.minecraft.textures.gui.toasts = *vanilla*
+assets.bluepower.textures.items.tungsten_ingot = *project*
+assets.buildcraftbuilders.textures.blocks.constructionMarkerBlock.default = *project*
+assets.buildcraftbuilders.textures.blocks.constructionMarkerBlock.recording = *project*
+assets.buildcraftbuilders.textures.blocks.libraryBlock.back = *project*
+assets.buildcraftbuilders.textures.blocks.libraryBlock.bottom = *project*
+assets.buildcraftbuilders.textures.blocks.libraryBlock.front = *project*
+assets.buildcraftbuilders.textures.blocks.libraryBlock.left = *project*
+assets.buildcraftbuilders.textures.blocks.libraryBlock.right = *project*
+assets.buildcraftbuilders.textures.blocks.libraryBlock.top = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.back = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.bottom = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.display = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.drill = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.drill_head = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.front = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.item_hatch = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.led_green = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.led_red = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.side = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock.top = *project*
+assets.buildcraftbuilders.textures.items.constructionMarkerBlock.default = *project*
+assets.buildcraftbuilders.textures.items.constructionMarkerBlock.recording = *project*
+assets.buildcraftbuilders.textures.items.template.clean = *project*
+assets.buildcraftbuilders.textures.items.template.used = *project*
+assets.ic2.textures.blocks.blockOreCopper = *project*
+assets.ic2.textures.blocks.blockOreLead = *project*
+assets.ic2.textures.blocks.blockOreTin = *project*
+assets.ic2.textures.blocks.blockOreUran = *project*
+assets.netherores.textures.blocks.Coal = *project*
+assets.netherores.textures.blocks.Copper = *project*
+assets.netherores.textures.blocks.Diamond = *project*
+assets.netherores.textures.blocks.Emerald = *project*
+assets.netherores.textures.blocks.Gold = *project*
+assets.netherores.textures.blocks.Iron = *project*
+assets.netherores.textures.blocks.Lapis = *project*
+assets.netherores.textures.blocks.Lead = *project*
+assets.netherores.textures.blocks.Mithril = *project*
+assets.netherores.textures.blocks.Nickel = *project*
+assets.netherores.textures.blocks.Osmium = *project*
+assets.netherores.textures.blocks.Platinum = *project*
+assets.netherores.textures.blocks.Redstone = *project*
+assets.netherores.textures.blocks.Salt = *project*
+assets.netherores.textures.blocks.Saltpeter = *project*
+assets.netherores.textures.blocks.Silver = *project*
+assets.netherores.textures.blocks.Steel = *project*
+assets.netherores.textures.blocks.Sulfur = *project*
+assets.netherores.textures.blocks.Tin = *project*
+assets.netherores.textures.blocks.Tungsten = *project*
+assets.tinker.textures.misc.bluegrasscolor = *project*
+assets.tinker.textures.misc.orangegrasscolor = *project*
+assets.tinker.textures.mob.villagertools = *project*
