--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -73,3 +73,8 @@ assets.buildcraftbuilders.textures.blocks.markerBlock = *project*
 assets.buildcraftbuilders.textures.blocks.pathMarkerBlock = *project*
 assets.buildcraftbuilders.textures.gui = *project*
 assets.buildcraftbuilders.textures.items.blueprint = *project*
+assets.buildcraftbuilders.textures.blocks.constructionMarkerBlock = *project*
+assets.buildcraftbuilders.textures.blocks.libraryBlock = *project*
+assets.buildcraftbuilders.textures.blocks.machineBlock = *project*
+assets.buildcraftbuilders.textures.items.constructionMarkerBlock = *project*
+assets.buildcraftbuilders.textures.items.template = *project*
