--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -2258,3 +2258,67 @@ assets.tinker.textures.items.broadsword._sword_accessory = *project*
 assets.tinker.textures.items.broadsword._sword_blade = *project*
 assets.tinker.textures.items.broadsword._sword_blade_broken = *project*
 assets.tinker.textures.items.broadsword._sword_handle = *project*
+assets.mekanism.textures.blocks.enrichment_chamber.EnrichmentChamberBack = *project*
+assets.mekanism.textures.blocks.enrichment_chamber.EnrichmentChamberBackOn = *project*
+assets.tinker.textures.items.chisel._chisel_handle = *project*
+assets.tinker.textures.items.chisel._chisel_head = *project*
+assets.tinker.textures.items.chisel._chisel_head_broken = *project*
+assets.tinker.textures.items.cleaver._cleaver_guard = *project*
+assets.tinker.textures.items.cleaver._cleaver_handle = *project*
+assets.tinker.textures.items.cleaver._cleaver_head = *project*
+assets.tinker.textures.items.cleaver._cleaver_head_broken = *project*
+assets.tinker.textures.items.cleaver._cleaver_shield = *project*
+assets.tinker.textures.items.crossbow._crossbow_binding = *project*
+assets.tinker.textures.items.crossbow._crossbow_body = *project*
+assets.tinker.textures.items.crossbow._crossbow_bow = *project*
+assets.tinker.textures.items.crossbow._crossbow_bow_1 = *project*
+assets.tinker.textures.items.crossbow._crossbow_bow_2 = *project*
+assets.tinker.textures.items.crossbow._crossbow_bow_3 = *project*
+assets.tinker.textures.items.crossbow._crossbow_string = *project*
+assets.tinker.textures.items.crossbow._crossbow_string_1 = *project*
+assets.tinker.textures.items.crossbow._crossbow_string_2 = *project*
+assets.tinker.textures.items.crossbow._crossbow_string_3 = *project*
+assets.tinker.textures.items.cutlass._cutlass_blade = *project*
+assets.tinker.textures.items.cutlass._cutlass_blade_broken = *project*
+assets.tinker.textures.items.cutlass._cutlass_guard = *project*
+assets.tinker.textures.items.cutlass._cutlass_handle = *project*
+assets.tinker.textures.items.dagger._dagger_accessory = *project*
+assets.tinker.textures.items.dagger._dagger_blade = *project*
+assets.tinker.textures.items.dagger._dagger_blade_broken = *project*
+assets.tinker.textures.items.dagger._dagger_handle = *project*
+assets.tinker.textures.items.excavator._excavator_binding = *project*
+assets.tinker.textures.items.excavator._excavator_grip = *project*
+assets.tinker.textures.items.excavator._excavator_handle = *project*
+assets.tinker.textures.items.excavator._excavator_head = *project*
+assets.tinker.textures.items.excavator._excavator_head_broken = *project*
+assets.tinker.textures.items.frypan._frypan_handle = *project*
+assets.tinker.textures.items.frypan._frypan_head = *project*
+assets.tinker.textures.items.frypan._frypan_head_broken = *project*
+assets.tinker.textures.items.javelin._javelin_accessory = *project*
+assets.tinker.textures.items.javelin._javelin_handle = *project*
+assets.tinker.textures.items.javelin._javelin_head = *project*
+assets.tinker.textures.items.javelin._javelin_head_broken = *project*
+assets.tinker.textures.items.longbow._bow_bottom = *project*
+assets.tinker.textures.items.longbow._bow_bottom_1 = *project*
+assets.tinker.textures.items.longbow._bow_bottom_2 = *project*
+assets.tinker.textures.items.longbow._bow_bottom_3 = *project*
+assets.tinker.textures.items.longbow._bow_grip = *project*
+assets.tinker.textures.items.longbow._bow_top = *project*
+assets.tinker.textures.items.longbow._bow_top_1 = *project*
+assets.tinker.textures.items.longbow._bow_top_2 = *project*
+assets.tinker.textures.items.longbow._bow_top_3 = *project*
+assets.tinker.textures.items.longbow._bowstring = *project*
+assets.tinker.textures.items.longbow._bowstring_1 = *project*
+assets.tinker.textures.items.longbow._bowstring_2 = *project*
+assets.tinker.textures.items.longbow._bowstring_3 = *project*
+assets.tinker.textures.items.longbow._bowstring_broken = *project*
+assets.tinker.textures.items.longsword._longsword_accessory = *project*
+assets.tinker.textures.items.longsword._longsword_blade = *project*
+assets.tinker.textures.items.longsword._longsword_blade_broken = *project*
+assets.tinker.textures.items.longsword._longsword_handle = *project*
+assets.galacticraftcore.textures.items.airVent = *project*
+assets.galacticraftcore.textures.items.basicItem%dingotAluminum = *project*
+assets.galacticraftcore.textures.items.basicItem%drawSilicon = *project*
+assets.galacticraftcore.textures.model.teledish = *vanilla*
+assets.galacticraftcore.textures.model.telefork = *vanilla*
+assets.galacticraftcore.textures.model.telesupport = *vanilla*
