--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -91,3 +91,5 @@ assets.buildcraftcore.textures.items.mapLocation = *project*
 assets.buildcraftcore.textures.laserBeams = *project*
 assets.mekanism.textures.blocks.fuelwood_heater = *project*
 assets.realms = *vanilla*
+assets.galacticraftcore.textures.misc.planets = *project*
+assets.galacticraftcore.textures.model.armor = *project*
